session tests